exports[`BoardItemsList rendering should render properly with multiple boards 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      <div
        className="my-board-item-title">
        boardTitle1
      </div>
      <div
        className="dropdown btn-group btn-group-link">
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="my-board-item-dropdown-overrides dropdown-toggle btn btn-link"
          disabled={false}
          id="boardId1-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button">
           
          <span
            className="caret" />
        </button>
        <ul
          aria-labelledby="boardId1-dropdown"
          className="dropdown-menu dropdown-menu-right"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Delete
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      <div
        className="my-board-item-title">
        boardTitle2
      </div>
      <div
        className="dropdown btn-group btn-group-link">
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="my-board-item-dropdown-overrides dropdown-toggle btn btn-link"
          disabled={false}
          id="boardId2-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button">
           
          <span
            className="caret" />
        </button>
        <ul
          aria-labelledby="boardId2-dropdown"
          className="dropdown-menu dropdown-menu-right"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Delete
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      <div
        className="my-board-item-title">
        boardTitle3
      </div>
      <div
        className="dropdown btn-group btn-group-link">
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="my-board-item-dropdown-overrides dropdown-toggle btn btn-link"
          disabled={false}
          id="boardId3-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button">
           
          <span
            className="caret" />
        </button>
        <ul
          aria-labelledby="boardId3-dropdown"
          className="dropdown-menu dropdown-menu-right"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Delete
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`BoardItemsList rendering should render properly with no boards 1`] = `
<div
  className="row">
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`BoardItemsList rendering should render properly with one board 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      <div
        className="my-board-item-title">
        boardTitle1
      </div>
      <div
        className="dropdown btn-group btn-group-link">
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="my-board-item-dropdown-overrides dropdown-toggle btn btn-link"
          disabled={false}
          id="boardId1-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button">
           
          <span
            className="caret" />
        </button>
        <ul
          aria-labelledby="boardId1-dropdown"
          className="dropdown-menu dropdown-menu-right"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Delete
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;
